--- a/src/pages/resume/Resume.css
+++ b/src/pages/resume/Resume.css
@@ -6,6 +6,7 @@
 
 .resumePic {
     margin-block: 10px;
+    width: 70vw;
     border: 1px solid lightgray;
 }
 
